--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@
 # Project information
 site_name: Material for MkDocs 中文文档
 site_url: https://mkdocs-material.pagex.top/
-site_author: llango
+site_author: WeiyanShen
 site_description: >-
   根据一组 Markdown 文件创建静态网站，以托管开源或商业项目的文档-支持自定义、搜索、对移动设备友好，支持 40 多种语言。
 
@@ -86,7 +86,7 @@ plugins:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/llango
+      link: https://github.com/PagesX
 
 # Extensions
 markdown_extensions:
